<resources>
    <string name="app_name">Football 5 Star</string>

    <string name="news_feed">News</string>
    <string name="matches">Matches</string>
    <string name="favourites">Favourites</string>
    <string name="videos">Videos</string>
    <string name="stats">Stats</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="login_activity">Login </string>
    <string name="signup_activity">Sign Up</string>


    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="some_error">Something went wrong</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!--<string name="title_cart">Cart</string>-->
    <!--<string name="title_profile">Profile</string>-->

    <string name="demo_tab_1">Cupcake</string>
    <string name="demo_tab_2">Donut</string>
    <string name="demo_tab_3">Eclair</string>
    <string name="demo_tab_4">Froyo</string>
    <string name="demo_tab_5">Gingerbread</string>
    <string name="demo_tab_6">Honeycomb</string>
    <string name="demo_tab_7">Ice Cream Sandwich</string>
    <string name="demo_tab_8">Jelly Bean</string>
    <string name="demo_tab_9">KitKat</string>
    <string name="demo_tab_10">Lollipop</string>


    <!--Login Validation messages-->
    <string name="login_text">Log In</string>
    <string name="username_blank_message">Username cannot be empty</string>
    <string name="username_wrong_message">Username should be >= 2 chars and no special ones</string>
    <string name="password_blank_message">Password cannot be empty</string>
    <string name="password_wrong_message">Password should be 8-16 chars</string>
    <string name="confirmpassword_blank_message">Confirm Password cannot be empty</string>
    <string name="confirmpassword_mismatch_message">Password and Confirm Password should be same</string>


    <!--Side drawer Strings-->
    <string name="title_news">News</string>
    <string name="title_match">Match</string>
    <string name="title_bookmarks">Bookmark</string>

    <string name="title_language">Language</string>
    <string name="title_settings">Settings</string>

    <string name="title_lineupmanage">Line-up Mannger</string>
    <string name="title_faq">FAQ</string>

    <string name="title_feedback">Feedback</string>
    <string name="title_eplpredictor">EPL Table Predictor</string>

    <!--Setting Module Strings-->
    <string name="label_notification">Notifications</string>
    <string name="label_mute">Mute</string>
    <string name="label_copyright">Copyright Declaration</string>
    <string name="label_termsandservices">Terms of service</string>
    <string name="label_privacypolicy">Privacy Policy</string>
    <string name="label_currentversion">Current Version</string>

</resources>
