<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/View_SP_15">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_padding_10dp"
        android:text="@string/app_name"
        android:textColor="@color/green_color"
        android:textSize="@dimen/Font_Normal_32"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_70dp"
        android:background="@color/green_color"
        android:fontFamily="@font/lato"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:background="@drawable/gray_border_rectangle"
        android:text="@string/sign_up"
        android:textColor="@color/light_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:gravity="center|center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/margin_padding_20dp"
            android:layout_height="0.4dp"
            android:background="@color/green_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_padding_5dp"
            android:paddingRight="@dimen/margin_padding_5dp"
            android:text="or"
            android:textColor="@color/light_black"
            android:textSize="@dimen/Font_Normal_18" />

        <View
            android:layout_width="@dimen/margin_padding_20dp"
            android:layout_height="0.4dp"
            android:background="@color/green_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="@dimen/margin_padding_40dp"
            android:layout_height="@dimen/margin_padding_40dp"
            android:layout_marginRight="@dimen/margin_padding_10dp"
            android:background="@drawable/twitter" />

        <ImageButton
            android:layout_width="@dimen/margin_padding_40dp"
            android:layout_height="@dimen/margin_padding_40dp"
            android:layout_marginLeft="@dimen/margin_padding_10dp"
            android:background="@drawable/facebook" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:background="@drawable/gray_border_rectangle"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_padding_10dp">

        <ImageView
            android:layout_width="@dimen/View_SP_25"
            android:layout_height="25dp"
            android:src="@drawable/google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_padding_5dp"
            android:text="@string/sign_in_google"
            android:textColor="@color/light_black"
            android:textSize="@dimen/Font_Normal_14" />
    </LinearLayout>

</LinearLayout>